# personal-website

./: README.md  package-lock.json  package.json
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.ts  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: ai.ts  base.ts  resume_client.ts
frontend/src/components/resume_adapter/: basic_adapter.tsx  mods.tsx
frontend/src/components/resume_renderer/: ResumeRenderer.tsx  ResumeSkeleton.tsx  basic_renderer.tsx
frontend/src/components/ui/: ThemeToggle.tsx  UnderlineOnSelection.tsx  navbar.tsx
frontend/src/config/: RootTabsConfig.tsx  Social.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: theme.tsx  use-toast.ts
frontend/src/lib/: Parse.tsx  ResumeComponentMods.tsx  ResumeComponentRendered.tsx
frontend/src/pages/: ContactMe.tsx  Home.tsx
frontend/src/types/: adapter.ts  http_base.ts  renderer.ts  resume.ts
frontend/src/utils/: adapter.ts  adapter_preprocessor.ts  error.tsx  http_client.ts  word_semantic.ts
server/: .gitignore  Dockerfile  pyproject.toml
server/app/: .env.example  main.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: resume.py  status.py
server/app/api/v1/socketio/: connection.py
server/app/core/: config.py  logging.py
server/app/core/databases/: mongo.py  redis.py
server/app/repositories/: abc.py  resume_repository.py
server/app/schemas/api/v1/: resume.py
server/app/schemas/db/: resume.py
server/app/services/: resume_service.py
(+1 files in other folders)
